--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li> <a href="">Pricing</a></li>
           <li><a href="">Features</a></li>
           <li><a href="">Log in</a></li>
-          <li><a href="">Get Started ➞</a></li>
+          <li><a href="#start">Get Started ➞</a></li>
          </ul> 
         </menu>
       </div>
@@ -68,7 +68,7 @@
           
           <div class="signup">
             <input type="text" placeholder="john@gmail.com">
-            <button>Get Started</button>
+            <button id="start">Get Started</button>
           </div>
          
         </div>
